# alinka-pyside

./: .flake8  .fpm  .gitignore  Dockerfile  Makefile  README.md  alinka.desktop  alinka.spec  docker-compose.test.yml  docker-compose.text.yml  docker-compose.yml  package.sh  pyproject.toml
app/: alembic.ini  create_documents.py  main.py  rspo_client.py  schemas.py  scripts.py
app/config/: __init__.py  configuration.py
app/constants/: __init__.py  common.py
app/db/: connection.py  models.py  queries.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2025_01_06_1024_initial_migration_77fc2409b0ef.py  6660edaf8986_add_support_center_table.py  7af3ac9f8735_initial_migration.py
app/docx/: __init__.py  constants.py  generate_document.py  schemas.py  utils.py
app/docx/templates/indywidualne/word/: document.xml
app/docx/templates/indywidualne_roczne/word/: document.xml
app/docx/templates/opinia/word/: document.xml
app/docx/templates/protokol/word/: document.xml
app/docx/templates/rewalidacyjne/word/: document.xml
app/docx/templates/specjalne/word/: document.xml
app/docx/templates/template_parts/: aac_information.xml  appeal.xml  applicants.xml  base_document.xml  child_address.xml  child_birth.xml  child_name.xml  diagnosis.xml  director_signature.xml  meeting.xml  on_request.xml  pesel.xml  receiver.xml  recipients.xml  recommendation.xml  recommendations_header.xml  signature_city_date.xml  supporting_center.xml
app/docx/templates/zarzadzenie/word/: document.xml
app/docx/templates/zawiadomienie/word/: document.xml
app/schemas/: __init__.py  db_schema.py  document_schema.py  rspo_schema.py
app/tests/: conftest.py  factories.py  fixtures.py  test_constants.py  test_documents.py  test_queries.py  test_schemas.py  utils.py
app/widget/: actions.py  components.py  main_window.py
app/widget/containers/: central_widget.py
app/widget/containers/main_body/: __init__.py
app/widget/containers/main_body/content/: __init__.py
app/widget/containers/main_body/footer/: __init__.py  application.py  settings.py
app/widget/containers/sidebar/: __init__.py
dokumenty/Wiktor Rzeźniczak_2019.07.15_spec/: Wiktor Rzeźniczak_2019.07.15_protokol.docx  Wiktor Rzeźniczak_2019.07.15_specjalne.docx  Wiktor Rzeźniczak_2019.07.15_zarzadzenie.docx  Wiktor Rzeźniczak_2019.07.15_zawiadomienie.docx
etc/: buildspec.yml  buildspec_merge.yml  buildspec_merge_linux.yml
etc/terraform/: main.tf
statics/: alinka
(+26 files in other folders)
