[tool.poetry]
name = "alinka-pyside"
version = "0.1.0"
description = "Aplication for Supporting Center for Children"
authors = ["CodeForPoznań <hello@codeforpoznan.pl>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile="black"

[tool.pytest.ini_options]
pythonpath = ["app"]
