[tool.poetry]
name = "alinka-pyside"
version = "0.2.0"
description = "Application for Supporting Center for Children"
authors = ["CodeForPoznań <hello@codeforpoznan.pl>"]

[tool.poetry.dependencies]
Jinja2 = "^3.1.2"
pydantic = "^1.10.2"
pyside6 = "^6.5.0"
python = "3.10.9"
SQLAlchemy = "^2.0.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
factory-boy = "^3.2.1"
faker = "^18.4.0"
flake8 = "^5.0.4"
flake8-pyproject = "^1.2.3"
isort = "^5.10.1"
pyinstaller = "^5.10.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]

[tool.isort]
profile="black"

[tool.pytest.ini_options]
pythonpath = ["app"]
